--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aos": "^2.3.4",
     "babel-loader": "^8.2.4",
     "http-server": "^14.1.0",
+    "react-player": "^2.10.0",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.6",
     "styled-components": "^5.3.5",
